# crypto-market-recorder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.env.example  pyproject.toml
chronos/: __init__.py  dedupe.py  funding.py  gateway.py  integrity.py  normalize.py  order_book.py  parquet_writer.py  raw_archive.py  reader.py  recorder.py  rest_client.py  schemas.py  timestamps.py  version.py
docs/: PHASE2_KERNEL_TIMESTAMPING.md  PROGRESS.md  SPEC.md
scripts/: correlate_trade_depth.py  record_data.py
systemd/: chronos.service
tests/: test_coinbase_deribit.py  test_correlator.py  test_dedupe.py  test_deribit_auth.py  test_funding_detector.py  test_integrity.py  test_normalize.py  test_order_book.py  test_parquet_writer.py  test_raw_archive.py  test_reader.py  test_reconcile_regression.py  test_recorder_end_to_end.py  test_recorder_maintained_book.py  test_recorder_p3_p14.py  test_timestamps.py
