[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos"
version = "0.1.0"
description = "Institutional-grade crypto market-data recorder"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "BlackDigitalStudio" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: System :: Archiving",
]
dependencies = [
    "aiohttp>=3.9",
    "orjson>=3.9",
    "pyarrow>=15.0",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
chronos-record = "scripts.record_data:main"
chronos-correlate = "scripts.correlate_trade_depth:main"

[tool.setuptools]
packages = ["chronos"]

[tool.setuptools.package-dir]
chronos = "recorder"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
